--- a/index.html
+++ b/index.html
@@ -3,10 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>MARTIN</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon?">
 </head>
 <body>
-    Portfolio content
+    <header class="container">
+        <div class="row">
+            HEADER (Background Image + nav)
+        </div>
+    </header>
+    <div class="container">
+        <div class="row">
+            About Me
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            My Services
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            My resume
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            I AM AVAILABLE FOR FREELANCE
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            MY PORTFOLIO
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            Testimonies
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            My Blogs
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            Contact Me
+        </div>
+    </div>
+    <footer class="container">
+        <div class="row">
+            FOOTER
+        </div>
+    </footer>
 
     <script src="./js/data.js"></script>
 </body>
