--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>MARTIN</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon?">
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/custom.css">
+    <link rel="stylesheet" href="./css/variables.css">
 </head>
 <body>
     <header class="container">
