--- a/index.html
+++ b/index.html
@@ -11,51 +11,61 @@
     <link rel="stylesheet" href="./css/variables.css">
 </head>
 <body>
+  <!-- Header -->
     <header class="container">
         <div class="row">
             HEADER (Background Image + nav)
         </div>
     </header>
+  <!-- About me -->
     <div class="container">
         <div class="row">
             About Me
         </div>
     </div>
+  <!-- My Services -->
     <div class="container">
         <div class="row">
             My Services
         </div>
     </div>
+  <!-- My Resume -->
     <div class="container">
         <div class="row">
             My resume
         </div>
     </div>
+  <!-- Freelance -->
     <div class="container">
         <div class="row">
             I AM AVAILABLE FOR FREELANCE
         </div>
     </div>
+  <!-- My Porfolio -->
     <div class="container">
         <div class="row">
             MY PORTFOLIO
         </div>
     </div>
+  <!-- Testimonies -->
     <div class="container">
         <div class="row">
             Testimonies
         </div>
     </div>
+  <!-- My Blogs -->
     <div class="container">
         <div class="row">
             My Blogs
         </div>
     </div>
+  <!-- Contact Me -->
     <div class="container">
         <div class="row">
             Contact Me
         </div>
     </div>
+  <!-- Footer -->
     <footer class="container">
         <div class="row">
             FOOTER
