My portfolio basic layout in rows and columns

--- a/index.html
+++ b/index.html
@@ -43,9 +43,27 @@
     </div>
   <!-- My Porfolio -->
     <div class="container">
-        <div class="row">
-            MY PORTFOLIO
-        </div>
+      <div class="row">
+        <div class="col-12">MY PORFOLIO</div>
+      </div>
+      <div class="row">
+        <div class="col-6">ALL BRANDING PHOTOSHOP FASHION PRODUCT</div>
+      </div>
+      <div class="row">
+        <div class="col-4">img</div>
+        <div class="col-4">img</div>
+        <div class="col-4">img</div>
+      </div>
+      <div class="row">
+        <div class="col-4">img</div>
+        <div class="col-4">img</div>
+        <div class="col-4">img</div>
+      </div>
+      <div class="row">
+        <div class="col-4">img</div>
+        <div class="col-4">img</div>
+        <div class="col-4">img</div>
+      </div>
     </div>
   <!-- Testimonies -->
     <div class="container">
