My services colum.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@
         </div>
     </div>
   <!-- My Services -->
-    <div class="container">
+    <div class="container bg-light">
         <div class="row">
-            My Services
+            <div class="col-12">My services</div>
+        </div>
+        <div class="row">
+            <div class="col-4">#</div>
+            <div class="col-4">#</div>
+            <div class="col-4">#</div>
+        </div>
+        <div class="row">
+            <div class="col-4">#</div>
+            <div class="col-4">#</div>
+            <div class="col-4">#</div>
         </div>
     </div>
   <!-- My Resume -->
