My blogs basic layout

--- a/index.html
+++ b/index.html
@@ -56,8 +56,32 @@
   <!-- My Blogs -->
     <div class="container">
         <div class="row">
-            My Blogs
+            <div class="col-12"> My Blogs</div>
         </div>
+        <div class="row">
+            <div class="col-4">
+                <div>IMG</div>
+                <div>Date</div>
+                <div>Make your Marketing website</div>
+                <div>Lorem Ipsum</div>
+                <div> Read More</div>
+            </div>
+            <div class="col-4">
+                <div>IMG</div>
+                <div>Date</div>
+                <div>Make your Marketing website</div>
+                <div>Lorem Ipsum</div>
+                <div> Read More</div>
+            </div>
+            <div class="col-4">
+                <div>IMG</div>
+                <div>Date</div>
+                <div>Make your Marketing website</div>
+                <div>Lorem Ipsum</div>
+                <div> Read More</div>
+            </div>
+        </div>
+    
     </div>
   <!-- Contact Me -->
     <div class="container">
