--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- My Porfolio -->
     <div class="container">
       <div class="row">
-        <div class="col-12">MY PORFOLIO</div>
+        <div class="col-12"><h1>my porfolio</h1></div>
       </div>
       <div class="row">
         <div class="col-6">ALL BRANDING PHOTOSHOP FASHION PRODUCT</div>
