--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
   <!-- Header -->
-  <header class="">    
+  <header>    
         <div class="navigation-bar container">
             <div class="row"> 
-            <div class="col-3 ">MARTIN</div>
-            <nav class="col-9 ">
+            <div class="col-1 "><a href="#">Martin</a></div>
+            <nav class="col-6 m-l-5">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
