Freelance html structure + css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/custom.css">
     <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/freelance.css">
 </head>
 <body>
   <!-- Header -->
@@ -123,10 +124,13 @@
         
     </div>
   <!-- Freelance -->
-    <div class="container">
+    <div class="container freelance">
         <div class="row">
-            I AM AVAILABLE FOR FREELANCE
-        </div>
+            <h3>I AM AVAILABLE FOR FREELANCE</h3>
+            <div class="col-12 row hire">
+                <a class="hireMeBtn" href="#">HIRE ME NOW</a>
+            </div> 
+        </div>   
     </div>
   <!-- My Porfolio -->
     <div class="container">
