--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     <link rel="stylesheet" href="./css/custom.css">
     <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/aboutMe.css">
+    <link rel="stylesheet" href="./css/services.css">
+    <link rel="stylesheet" href="./css/resume.css">
     <link rel="stylesheet" href="./css/freelance.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
+    <link rel="stylesheet" href="./css/testimonies.css">
     <link rel="stylesheet" href="./css/myBlogs.css">
+    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
