update css file

--- a/index.html
+++ b/index.html
@@ -73,41 +73,43 @@
     </div>
     <!-- My Services -->
     <div class="container bg-light">
-        <div class="row">
+        <div class="row ">
+
             <div class="col-12">
-                <h1>MY SERVICES</h1>
+                <h1><span>My </span>services</h1>
             </div>
+            <div class="servicesLine"></div>
         </div>
         <div class="row">
-            <div class="col-4">
-                <h3>Search Optimization</h3><br>
+            <div class="col-4 servicesInfo">
+                <h3>Search Optimization</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4">
-                <h3>Logo & Identityc</h3><br>
+            <div class="col-4 servicesInfo">
+                <h3>Logo & Identityc</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4">
-                <h3>Graphics Design</h3><br>
+            <div class="col-4 servicesInfo">
+                <h3>Graphics Design</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-4">
-                <h3>Fully Responsive</h3><br>
+            <div class="col-4 servicesInfo">
+                <h3>Fully Responsive</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4">
-                <h3>Advanced Options</h3><br>
+            <div class="col-4 servicesInfo">
+                <h3>Advanced Options</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4">
-                <h3>Reasonable Pricing</h3><br>
+            <div class="col-4 servicesInfo">
+                <h3>Reasonable Pricing</h3>
                 <p>is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
         </div>
