--- a/index.html
+++ b/index.html
@@ -169,29 +169,29 @@
         </div>
 
         <!-- My Porfolio -->
-        <div class="container">
+        <div class="container portfolio">
             <div class="row">
-                <div class="col-12">
-                    <h1>my porfolio</h1>
+                <h2 class="section-title col-12"><span>my</span> portfolio</h2>
+                <nav class="col-12">
+                    <li class="active">all</li>
+                    <li>branding</li>
+                    <li>photoshop</li>
+                    <li>fashion</li>
+                    <li>product</li>
+                </nav>
+            </div>
+            <div class="row">
+                <div id="gallery" class="col-12">
+                    <div class="image"><img src="./img/portfolio/portfolio-1.jpg" alt="portfolio"></div>
+                    <div class="image"><img src="./img/portfolio/portfolio-2.jpg" alt="portfolio"></div>
+                    <div class="image"><img src="./img/portfolio/portfolio-3.jpg" alt="portfolio"></div>
+                    <div class="image"><img src="./img/portfolio/portfolio-4.jpg" alt="portfolio"></div>
+                    <div class="image"><img src="./img/portfolio/portfolio-5.jpg" alt="portfolio"></div>
+                    <div class="image"><img src="./img/portfolio/portfolio-6.jpg" alt="portfolio"></div>
+                    <div class="image"><img src="./img/portfolio/portfolio-7.jpg" alt="portfolio"></div>
+                    <div class="image"><img src="./img/portfolio/portfolio-8.jpg" alt="portfolio"></div>
+                    <div class="image"><img src="./img/portfolio/portfolio-9.jpg" alt="portfolio"></div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-6 m-l-3">ALL BRANDING PHOTOSHOP FASHION PRODUCT</div>
-            </div>
-            <div class="row">
-                <div class="col-4">img</div>
-                <div class="col-4">img</div>
-                <div class="col-4">img</div>
-            </div>
-            <div class="row">
-                <div class="col-4">img</div>
-                <div class="col-4">img</div>
-                <div class="col-4">img</div>
-            </div>
-            <div class="row">
-                <div class="col-4">img</div>
-                <div class="col-4">img</div>
-                <div class="col-4">img</div>
             </div>
         </div>
         <!-- Testimonies -->
