--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
     </div>
     <!-- My Services -->
     <div class="container bg-light">
-        <div class="row ">
-
+        <div class="row">
             <div class="col-12">
                 <h1><span>My </span>services</h1>
             </div>
@@ -83,16 +82,25 @@
         </div>
         <div class="row">
             <div class="col-4 servicesInfo">
+                <div>
+                    <i><a href="#" class="fa fa-desktop"></a></i>
+                </div>
                 <h3>Search Optimization</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
             <div class="col-4 servicesInfo">
+                <div>
+                    <i><a href="#" class="fa fa-align-justify"></i></a>
+                </div>
                 <h3>Logo & Identityc</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
             <div class="col-4 servicesInfo">
+                <div>
+                    <i><a href="#" class="fa fa-rocket"></a></i>
+                </div>
                 <h3>Graphics Design</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
@@ -100,16 +108,25 @@
 
         <div class="row">
             <div class="col-4 servicesInfo">
+                <div>
+                    <i><a href="#" class="fa fa-tablet"></a></i>
+                </div>
                 <h3>Fully Responsive</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
             <div class="col-4 servicesInfo">
+                <div>
+                    <i><a href="#" class="fa fa-wrench"></a></i>
+                </div>
                 <h3>Advanced Options</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
             <div class="col-4 servicesInfo">
+                <div>
+                    <i><a href="#" class="fa fa-scissors"></a></i>
+                </div>
                 <h3>Reasonable Pricing</h3>
                 <p>is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
@@ -156,10 +173,9 @@
                         interdum. Aenean
                         sodales dui quis leo fermentum scelerisque.</p>
                 </div>
-
             </div>
-
         </div>
+    </div>
         <!-- Freelance -->
         <div class="container freelance">
             <div class="row">
