--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 <div class="col-1 "><a href="#">Martin</a></div>
                 <nav class="col-6 m-l-5">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#" class="hoverEffect">Home</a></li>
+                        <li><a href="#" class="hoverEffect">About</a></li>
+                        <li><a href="#" class="hoverEffect">Services</a></li>
+                        <li><a href="#" class="hoverEffect">Portfolio</a></li>
+                        <li><a href="#" class="hoverEffect">Blog</a></li>
+                        <li><a href="#" class="hoverEffect">Contact</a></li>
                     </ul>
                 </nav>
             </div>
