Image filter and dynamic content creation

--- a/index.html
+++ b/index.html
@@ -174,23 +174,10 @@
                 <h2 class="section-title col-12"><span>my</span> portfolio</h2>
                 <nav class="col-12">
                     <li class="active">all</li>
-                    <li>branding</li>
-                    <li>photoshop</li>
-                    <li>fashion</li>
-                    <li>product</li>
                 </nav>
             </div>
             <div class="row">
                 <div id="gallery" class="col-12">
-                    <div class="image"><img src="./img/portfolio/portfolio-1.jpg" alt="portfolio"></div>
-                    <div class="image"><img src="./img/portfolio/portfolio-2.jpg" alt="portfolio"></div>
-                    <div class="image"><img src="./img/portfolio/portfolio-3.jpg" alt="portfolio"></div>
-                    <div class="image"><img src="./img/portfolio/portfolio-4.jpg" alt="portfolio"></div>
-                    <div class="image"><img src="./img/portfolio/portfolio-5.jpg" alt="portfolio"></div>
-                    <div class="image"><img src="./img/portfolio/portfolio-6.jpg" alt="portfolio"></div>
-                    <div class="image"><img src="./img/portfolio/portfolio-7.jpg" alt="portfolio"></div>
-                    <div class="image"><img src="./img/portfolio/portfolio-8.jpg" alt="portfolio"></div>
-                    <div class="image"><img src="./img/portfolio/portfolio-9.jpg" alt="portfolio"></div>
                 </div>
             </div>
         </div>
@@ -343,7 +330,7 @@
                 </div>
             </div>
         </footer>
-        <script src="./js/data.js"></script>
+        <script src="./js/data.js" type="module"></script>
 </body>
 
 </html>
