--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
             </div>
             <div class="servicesLine"></div>
         </div>
-        <div class="row">
-            <div class="col-4 servicesInfo">
+        <div class="row"> 
+            <div class="col-4 servicesInfo" id="servisInfoCol">
+                
                 <div>
                     <i><a href="#" class="fa fa-desktop"></a></i>
                 </div>
@@ -89,7 +90,7 @@
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4 servicesInfo">
+            <div class="col-4 servicesInfo" id="servisInfoCol">
                 <div>
                     <i><a href="#" class="fa fa-align-justify"></i></a>
                 </div>
@@ -97,17 +98,15 @@
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4 servicesInfo">
+            <div class="col-4 servicesInfo" id="servisInfoCol">
                 <div>
                     <i><a href="#" class="fa fa-rocket"></a></i>
                 </div>
                 <h3>Graphics Design</h3>
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-4 servicesInfo">
+        
+            <div class="col-4 servicesInfo" id="servisInfoCol">
                 <div>
                     <i><a href="#" class="fa fa-tablet"></a></i>
                 </div>
@@ -115,7 +114,7 @@
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4 servicesInfo">
+            <div class="col-4 servicesInfo" id="servisInfoCol">
                 <div>
                     <i><a href="#" class="fa fa-wrench"></a></i>
                 </div>
@@ -123,7 +122,7 @@
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4 servicesInfo">
+            <div class="col-4 servicesInfo" id="servisInfoCol">
                 <div>
                     <i><a href="#" class="fa fa-scissors"></a></i>
                 </div>
