--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="navigation-bar container">
+        <div class="navigation-bar container ">
             <div class="row">
-                <div class="col-1 "><a href="#">Martin</a></div>
+                <div class="col-1 "><a href="#" class="martinText">Martin</a></div>
                 <nav class="col-6 m-l-5">
                     <ul>
                         <li><a href="#" class="hoverEffect">Home</a></li>
@@ -344,6 +344,7 @@
             </div>
         </footer>
         <script src="./js/data.js"></script>
+        <script src="./js/header.js"></script>
 </body>
 
 </html>
