--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <nav class="col-6 m-l-5">
                     <ul>
                         <li><a href="#home" class="hoverEffect">Home</a></li>
-                        <li><a href="#" class="hoverEffect">About</a></li>
-                        <li><a href="#" class="hoverEffect">Services</a></li>
-                        <li><a href="#" class="hoverEffect">Portfolio</a></li>
-                        <li><a href="#" class="hoverEffect">Blog</a></li>
-                        <li><a href="#" class="hoverEffect">Contact</a></li>
+                        <li><a href="#aboutMe" class="hoverEffect">About</a></li>
+                        <li><a href="#services" class="hoverEffect">Services</a></li>
+                        <li><a href="#portfolio" class="hoverEffect">Portfolio</a></li>
+                        <li><a href="#blog" class="hoverEffect">Blog</a></li>
+                        <li><a href="#contact" class="hoverEffect">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -54,7 +54,7 @@
 
     </header>
     <!-- About me -->
-    <div class="container">
+    <div id="aboutMe" class="container">
         <div class="row">
             <div class="col-5">
                 <img src="" alt="Martins PHOTO" />
@@ -73,7 +73,7 @@
         </div>
     </div>
     <!-- My Services -->
-    <div class="container bg-light">
+    <div id="services" class="container bg-light">
         <div class="row">
             <div class="col-12">
                 <h1><span>My </span>services</h1>
@@ -186,7 +186,7 @@
         </div>
 
         <!-- My Porfolio -->
-        <div class="container portfolio">
+        <div id="portfolio" class="container portfolio">
             <div class="row">
                 <h2 class="section-title col-12"><span>my</span> portfolio</h2>
                 <nav class="col-12">
@@ -268,7 +268,7 @@
             </div>
         </div>
         <!-- My Blogs -->
-        <div class="container myBlogs">
+        <div id="blog" class="container myBlogs">
             <div class="row">
                 <div class="col-12">
                     <h1><span>My </span>Blogs</h1>
@@ -322,7 +322,7 @@
             </div>
         </div>
         <!-- Contact Me -->
-        <div class="container">
+        <div id="contact" class="container">
             <div class="row">
                 Contact Me
             </div>
