--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="servicesLine"></div>
         </div>
         <div class="row"> 
-            <div class="col-4 servicesInfo" id="servisInfoCol">
+            <div class="col-4 servicesInfo">
                 
                 <div>
                     <i><a href="#" class="fa fa-desktop"></a></i>
@@ -90,7 +90,7 @@
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4 servicesInfo" id="servisInfoCol">
+            <div class="col-4 servicesInfo">
                 <div>
                     <i><a href="#" class="fa fa-align-justify"></i></a>
                 </div>
@@ -98,7 +98,7 @@
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4 servicesInfo" id="servisInfoCol">
+            <div class="col-4 servicesInfo">
                 <div>
                     <i><a href="#" class="fa fa-rocket"></a></i>
                 </div>
@@ -106,7 +106,7 @@
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
         
-            <div class="col-4 servicesInfo" id="servisInfoCol">
+            <div class="col-4 servicesInfo">
                 <div>
                     <i><a href="#" class="fa fa-tablet"></a></i>
                 </div>
@@ -114,7 +114,7 @@
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4 servicesInfo" id="servisInfoCol">
+            <div class="col-4 servicesInfo">
                 <div>
                     <i><a href="#" class="fa fa-wrench"></a></i>
                 </div>
@@ -122,7 +122,7 @@
                 <p>The9 is a graphically polished, interactive, easily customizable, highly modern, fast loading.</p>
             </div>
 
-            <div class="col-4 servicesInfo" id="servisInfoCol">
+            <div class="col-4 servicesInfo">
                 <div>
                     <i><a href="#" class="fa fa-scissors"></a></i>
                 </div>
@@ -135,39 +135,40 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>MY RESUME</h1>
+                <h1><span>My </span>resume</h1>
             </div>
+            <div class="resumeLine"></div>
         </div>
-        <div class="row">
-            <div class="col-6">
+        <div class="row jobsHistory">
+            <div class="col-6 history">
                 <div>
                     <h2>WORK</h2>
-                    <h3>APPLE</h3><br>
-                    <p>OCT 2015 - JUNE 2016</p><br>
+                    <h3>APPLE</h3>
+                    <i>2015 - JUNE 2016</i>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt sit amet erat malesuada
                         interdum. Aenean
                         sodales dui quis leo fermentum scelerisque.</p>
                 </div>
                 <div>
-                    <h3>GOOGLE</h3><br>
-                    <p>OCT 2015 - JUNE 2016</p><br>
+                    <h3>GOOGLE</h3>
+                    <i>OCT 2015 - JUNE 2016</i>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt sit amet erat malesuada
                         interdum. Aenean
                         sodales dui quis leo fermentum scelerisque.</p>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 history">
                 <div>
                     <h2>WORK</h2>
-                    <h3>APPLE</h3><br>
-                    <p>OCT 2015 - JUNE 2016</p><br>
+                    <h3>APPLE</h3>
+                    <i>OCT 2015 - JUNE 2016</i>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt sit amet erat malesuada
                         interdum. Aenean
                         sodales dui quis leo fermentum scelerisque.</p>
                 </div>
                 <div>
-                    <h3>GOOGLE</h3><br>
-                    <p>OCT 2015 - JUNE 2016</p><br>
+                    <h3>GOOGLE</h3>
+                    <i>OCT 2015 - JUNE 2016</i>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt sit amet erat malesuada
                         interdum. Aenean
                         sodales dui quis leo fermentum scelerisque.</p>
