Modal image gallery #38

--- a/index.html
+++ b/index.html
@@ -198,6 +198,18 @@
                 <div id="gallery" class="col-12">
                 </div>
             </div>
+            <div id="myModal">
+                <div class="modal-bg"></div>
+                <span title="Close Window (Esc)" class="close">&times;</span>
+                <div class="modal-content">
+                    <div class="slides">
+                        <img src="">
+                        <div class="numbertext"></div>
+                    </div>
+                </div>
+                <button title="Previous(Left arrow key)" type="button" class="arrow-left">⯇</button>
+                <button title="Next (Right arrow key)" type="button" class="arrow-right">⯈</button>
+            </div>
         </div>
         <!-- Testimonies -->
         <div class="container bg-light">
