testimonials and my blogs js

--- a/index.html
+++ b/index.html
@@ -202,70 +202,7 @@
         <!-- Testimonies -->
         <div class="container bg-light">
             <div id="slider">
-                <input type="radio" name="slider" id="slide1" checked>
-                <input type="radio" name="slider" id="slide2">
-                <input type="radio" name="slider" id="slide3">
-                <input type="radio" name="slider" id="slide4">
-                <div id="slides">
-                    <div id="overflow">
-                        <div class="inner">
-                            <div class="slide slide_1">
-                                <div class="testimonials">
-                                    <div class='testimoniesImgBox'><img src="./img/team/team-1.jpg"
-                                            title="testimonies image" alt="testimonies"></div>
-                                    <div class="testimoniesText">Lorem ipsum dolor sit amet consectetur adipisicing
-                                        elit.
-                                        Accusantium laboriosam officiis facilis ratione dolorum
-                                        repudiandae maxime commodi architecto velit. Assumenda.</div>
-                                    <div class="testimonyAuthor">Nancy Bayers</div>
-                                    <div class="co-f">Co-Founder</div>
-                                </div>
-                            </div>
-                            <div class="slide slide_2">
-                                <div class="testimonials">
-                                    <div class='testimoniesImgBox'><img src="./img/team/team-2.jpg"
-                                            title="testimonies image" alt="testimonies"></div>
-                                    <div class="testimoniesText">Lorem ipsum dolor sit amet consectetur adipisicing
-                                        elit.
-                                        Accusantium laboriosam officiis facilis ratione dolorum
-                                        repudiandae maxime commodi architecto velit. Assumenda.</div>
-                                    <div class="testimonyAuthor">Nancy Bayers</div>
-                                    <div class="co-f">Co-Founder</div>
-                                </div>
-                            </div>
-                            <div class="slide slide_3">
-                                <div class="testimonials">
-                                    <div class='testimoniesImgBox'><img src="./img/team/team-3.jpg"
-                                            title="testimonies image" alt="testimonies"></div>
-                                    <div class="testimoniesText">Lorem ipsum dolor sit amet consectetur adipisicing
-                                        elit.
-                                        Accusantium laboriosam officiis facilis ratione dolorum
-                                        repudiandae maxime commodi architecto velit. Assumenda.</div>
-                                    <div class="testimonyAuthor">Nancy Bayers</div>
-                                    <div class="co-f">Co-Founder</div>
-                                </div>
-                            </div>
-                            <div class="slide slide_4">
-                                <div class="testimonials">
-                                    <div class='testimoniesImgBox'><img src="./img/team/team-4.jpg"
-                                            title="testimonies image" alt="testimonies"></div>
-                                    <div class="testimoniesText">Lorem ipsum dolor sit amet consectetur adipisicing
-                                        elit.
-                                        Accusantium laboriosam officiis facilis ratione dolorum
-                                        repudiandae maxime commodi architecto velit. Assumenda.</div>
-                                    <div class="testimonyAuthor">Nancy Bayers</div>
-                                    <div class="co-f">Co-Founder</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="bullets">
-                    <label for="slide1"></label>
-                    <label for="slide2"></label>
-                    <label for="slide3"></label>
-                    <label for="slide4"></label>
-                </div>
+               
             </div>
         </div>
         <!-- My Blogs -->
@@ -276,50 +213,7 @@
                 </div>
                 <div class="blogLine"></div>
             </div>
-            <div class="row">
-
-                <div class="col-4 blog">
-                    <div class="blogsImg">
-                        <a href="#">
-                            <img src="./img/blog/blog-1.jpg" title="" alt="blog">
-                        </a>
-                    </div>
-                    <div class="blogsInfo">
-                        <div class="b-meta row"><span>02 Mar 2019 </span><span>| Design</span></div>
-                        <div class="blogTitle"><a href="#">Make your Marketing website</a></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        <div class="readMore"><a href="#">Read More</a></div>
-                    </div>
-                </div>
-
-                <div class="col-4 blog">
-                    <div class="blogsImg">
-                        <a href="#">
-                            <img src="./img/blog/blog-2.jpg" title="" alt="blog">
-                        </a>
-                    </div>
-                    <div class="blogsInfo">
-                        <div class="b-meta row"><span>02 Mar 2019 </span><span>| Design</span></div>
-                        <div class="blogTitle"><a href="#">Make your Marketing website</a></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        <div class="readMore"><a href="#">Read More</a></div>
-                    </div>
-                </div>
-
-                <div class="col-4 blog">
-                    <div class="blogsImg">
-                        <a href="#">
-                            <img src="./img/blog/blog-3.jpg" title="" alt="blog">
-                        </a>
-                    </div>
-                    <div class="blogsInfo">
-                        <div class="b-meta row"><span>02 Mar 2019 </span><span>| Design</span></div>
-                        <div class="blogTitle"><a href="#">Make your Marketing website</a></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        <div class="readMore"><a href="#">Read More</a></div>
-                    </div>
-                </div>
-
+            <div class="row blogSection">
             </div>
         </div>
         <!-- Contact Me -->
@@ -350,6 +244,8 @@
         </footer>
         <script src="./js/data.js" type="module"></script>
         <script src="./js/header.js"></script>
+        <script src="./js/myBlogs.js"></script>
+        <script src="./js/testimonials.js"></script>
 </body>
 
 </html>
