header + jScript update My bolgs

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </div>
                 <div class="blogLine"></div>
             </div>
-            <div class="row blogSection">
+            <div class="row blogSection" id=''>
             </div>
         </div>
         <!-- Contact Me -->
