--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
                 <div class="blogLine"></div>
             </div>
-            <div class="row blogSection" id=''>
+            <div class="row blogSection" id='blogs'>
             </div>
         </div>
         <!-- Contact Me -->
